objects/Client_Plan_Revenue_By_Product__c.object
<CustomObject>
    <fields>
        <fullName>Client_Plan__c</fullName>
        <label>Client Plan</label>
        <referenceTo>Client_Plan__c</referenceTo>
        <relationshipName>Revenue_By_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>F12P_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_CommercialPropertyFinance__c</fullName>
        <label>Commercial Property Finance N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Debt__c</fullName>
        <label>Debt N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Deposits__c</fullName>
        <label>Deposits N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Derivatives__c</fullName>
        <label>Derivatives N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Equities__c</fullName>
        <label>Equities N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_FX__c</fullName>
        <label>FX N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_FixedIncome__c</fullName>
        <label>Fixed Income N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_OtherTrade__c</fullName>
        <label>Other Trade N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Passive__c</fullName>
        <label>Passive N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_PrimeServices__c</fullName>
        <label>Prime Services N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_PrivateEquity__c</fullName>
        <label>Private Equity N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Trade__c</fullName>
        <label>Trade N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_TransactionProducts__c</fullName>
        <label>Transaction Products N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_Treasury__c</fullName>
        <label>Treasury N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12P_WorkingCapital__c</fullName>
        <label>Working Capital N12 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F12_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_CommercialPropertyFinance__c</fullName>
        <label>Commercial Property Finance Next 12 Mont</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Debt__c</fullName>
        <label>Debt Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Deposits__c</fullName>
        <label>Deposits Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Derivatives__c</fullName>
        <label>Derivatives Next 12 Monhs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Equities__c</fullName>
        <label>Equities Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_FX__c</fullName>
        <label>FX Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_FixedIncome__c</fullName>
        <label>Fixed Income Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_OtherTrade__c</fullName>
        <label>Other Trade Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Passive__c</fullName>
        <label>Passive Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_PrimeServices__c</fullName>
        <label>Prime Services Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_PrivateEquity__c</fullName>
        <label>Private Equity Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Trade__c</fullName>
        <label>Trade Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_TransactionProducts__c</fullName>
        <label>Transaction Products Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_Treasury__c</fullName>
        <label>Treasury Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F12_WorkingCapital__c</fullName>
        <label>Working Capital Next 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24P_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_CommercialPropertyFinance__c</fullName>
        <label>Commercial Property Finance N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Debt__c</fullName>
        <label>Debt N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Deposits__c</fullName>
        <label>Deposits N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Derivatives__c</fullName>
        <label>Derivatives N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Equities__c</fullName>
        <label>Equities N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_FX__c</fullName>
        <label>FX N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_FixedIncome__c</fullName>
        <label>Fixed Income N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_OtherTrade__c</fullName>
        <label>Other Trade N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Passive__c</fullName>
        <label>Passive N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_PrimeServices__c</fullName>
        <label>Prime Services N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_PrivateEquity__c</fullName>
        <label>Private Equity N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Trade__c</fullName>
        <label>Trade N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_TransactionProducts__c</fullName>
        <label>Transaction Products N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_Treasury__c</fullName>
        <label>Treasury N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24P_WorkingCapital__c</fullName>
        <label>Working Capital N12-24 Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>F24_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance Next 12-24 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_CommercialPropertyFinance__c</fullName>
        <label>Commercial Prop Fnance Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Debt__c</fullName>
        <label>Debt Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Deposits__c</fullName>
        <label>Deposits Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Derivatives__c</fullName>
        <label>Derivatives Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Equities__c</fullName>
        <label>Equities Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_FX__c</fullName>
        <label>FX Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_FixedIncome__c</fullName>
        <label>Fixed Income Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_OtherTrade__c</fullName>
        <label>Other Trade Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Passive__c</fullName>
        <label>Passive Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_PrimeServices__c</fullName>
        <label>Prime Services Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_PrivateEquity__c</fullName>
        <label>Private Equity Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Trade__c</fullName>
        <label>Trade Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_TransactionProducts__c</fullName>
        <label>Transaction Products Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_Treasury__c</fullName>
        <label>Treasury Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F24_WorkingCapital__c</fullName>
        <label>Working Capital Next 12-24 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance Historical 12 Mont</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance Historical 12 Mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_CommercialPropertyFinance__c</fullName>
        <label>Commercial Prop Finance Historical 12 Mo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Debt__c</fullName>
        <label>Debt Historical 12 Months</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Deposits__c</fullName>
        <label>Deposits Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Derivatives__c</fullName>
        <label>Derivatives Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Equities__c</fullName>
        <label>Equities Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_FX__c</fullName>
        <label>FX Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_FixedIncome__c</fullName>
        <label>Fixed Income Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM Historical 12 Mont</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_OtherTrade__c</fullName>
        <label>Other Trade Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Passive__c</fullName>
        <label>Passive Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_PrimeServices__c</fullName>
        <label>Prime Services Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_PrivateEquity__c</fullName>
        <label>Private Equity Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Trade__c</fullName>
        <label>Trade Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_TransactionProducts__c</fullName>
        <label>Transaction Products Historical 12 Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_Treasury__c</fullName>
        <label>Treasury Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H12_WorkingCapital__c</fullName>
        <label>Working Capital Historical 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastPulledfromMyMI__c</fullName>
        <description>Datetime when we last pulled data from MyMI. If this is not set the user has chosen to manually enter MyMI data</description>
        <label>Last Pulled from MyMI</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RWA_AssetSalesFinance__c</fullName>
        <label>Asset &amp; Sales Finance RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_AverageDepositBalance__c</fullName>
        <label>Average Deposit Balance RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_CommercialPropertyFinance__c</fullName>
        <label>Commercial Property Finance RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Debt__c</fullName>
        <label>Debt RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Deposits__c</fullName>
        <label>Deposits RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Equities__c</fullName>
        <label>Equities RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_FX__c</fullName>
        <label>FX RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_FixedIncome__c</fullName>
        <label>Fixed Income RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_OtherMADCMECM__c</fullName>
        <label>Other M&amp;A / DCM / ECM RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_OtherRBBWealth__c</fullName>
        <label>Other RBB / Wealth RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_OtherTrade__c</fullName>
        <label>Other Trade RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Passive__c</fullName>
        <label>Passive RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_PrimeServices__c</fullName>
        <label>Prime Services RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_PrivateEquity__c</fullName>
        <label>Private Equity RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Trade__c</fullName>
        <label>Trade RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_TransactionProducts__c</fullName>
        <label>Transaction Products RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_Treasury__c</fullName>
        <label>Treasury RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RWA_WorkingCapital__c</fullName>
        <label>Working Capital RWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F12_Contrib_Weighted__c</fullName>
        <formula>(F12_Deposits__c * F12P_Deposits__c) + (F12_TransactionProducts__c * F12P_TransactionProducts__c) + (F12_Equities__c * F12P_Equities__c) + (F12_FixedIncome__c * F12P_FixedIncome__c) + (F12_Debt__c * F12P_Debt__c) + (F12_Trade__c * F12P_Trade__c) + (F12_FX__c * F12P_FX__c) + (F12_AssetSalesFinance__c * F12P_AssetSalesFinance__c) + (F12_OtherTrade__c * F12P_OtherTrade__c) + (F12_OtherMADCMECM__c * F12P_OtherMADCMECM__c) + (F12_OtherRBBWealth__c * F12P_OtherRBBWealth__c) + (F12_CommercialPropertyFinance__c * F12P_CommercialPropertyFinance__c) + (F12_Passive__c * F12P_Passive__c) + (F12_PrimeServices__c * F12P_PrimeServices__c) + (F12_PrivateEquity__c * F12P_PrivateEquity__c) + (F12_Treasury__c * F12P_Treasury__c) + (F12_WorkingCapital__c * F12P_WorkingCapital__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cont (weighted) Next 12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F12_Contribution__c</fullName>
        <formula>F12_Deposits__c + F12_TransactionProducts__c + F12_Equities__c + F12_FixedIncome__c + F12_Debt__c + F12_Trade__c + F12_FX__c + F12_AssetSalesFinance__c + F12_OtherTrade__c + F12_OtherMADCMECM__c + F12_OtherRBBWealth__c + F12_CommercialPropertyFinance__c + F12_Passive__c + F12_PrimeServices__c + F12_PrivateEquity__c + F12_Treasury__c + F12_WorkingCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cont Next 12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F12_Non_Lending_Contrib__c</fullName>
        <formula>F12_Deposits__c + F12_TransactionProducts__c + F12_Equities__c + F12_FixedIncome__c + F12_FX__c + F12_OtherMADCMECM__c + F12_OtherRBBWealth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Len Cont Next 12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F12_Non_Lendng_Contrib_Weighted__c</fullName>
        <formula>(F12_Deposits__c * F12P_Deposits__c) + (F12_TransactionProducts__c * F12P_TransactionProducts__c) + (F12_Equities__c * F12P_Equities__c) + (F12_FixedIncome__c * F12P_FixedIncome__c) + (F12_FX__c * F12P_FX__c) + (F12_OtherMADCMECM__c * F12P_OtherMADCMECM__c) + (F12_OtherRBBWealth__c * F12P_OtherRBBWealth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Len Cont (weighted) Next 12M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F24_Contrib_Weighted__c</fullName>
        <formula>(F24_Deposits__c * F24P_Deposits__c) + (F24_TransactionProducts__c * F24P_TransactionProducts__c) + (F24_Equities__c * F24P_Equities__c) + (F24_FixedIncome__c * F24P_FixedIncome__c) + (F24_Debt__c * F24P_Debt__c) + (F24_Trade__c * F24P_Trade__c) + (F24_FX__c * F24P_FX__c) + (F24_AssetSalesFinance__c * F24P_AssetSalesFinance__c) + (F24_OtherTrade__c * F24P_OtherTrade__c) + (F24_OtherMADCMECM__c * F24P_OtherMADCMECM__c) + (F24_OtherRBBWealth__c * F24P_OtherRBBWealth__c) + (F24_CommercialPropertyFinance__c * F24P_CommercialPropertyFinance__c) + (F24_Passive__c * F24P_Passive__c) + (F24_PrimeServices__c * F24P_PrimeServices__c) + (F24_PrivateEquity__c * F24P_PrivateEquity__c) + (F24_Treasury__c * F24P_Treasury__c) + (F24_WorkingCapital__c * F24P_WorkingCapital__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contrib (weigh) Next 12-24M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F24_Contribution__c</fullName>
        <formula>F24_Deposits__c + F24_TransactionProducts__c + F24_Equities__c + F24_FixedIncome__c + F24_Debt__c + F24_Trade__c + F24_FX__c + F24_AssetSalesFinance__c + F24_OtherTrade__c + F24_OtherMADCMECM__c + F24_OtherRBBWealth__c + F24_CommercialPropertyFinance__c + F24_Passive__c + F24_PrimeServices__c + F24_PrivateEquity__c + F24_Treasury__c + F24_WorkingCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cont Next 12-24M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F24_Non_Lending_Contrib__c</fullName>
        <formula>F24_Deposits__c + F24_TransactionProducts__c + F24_Equities__c + F24_FixedIncome__c + F24_FX__c + F24_OtherMADCMECM__c + F24_OtherRBBWealth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Len Cont Next 12-24M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_F24_Non_Lendng_Contrib_Weighted__c</fullName>
        <formula>(F24_Deposits__c * F24P_Deposits__c) + (F24_TransactionProducts__c * F24P_TransactionProducts__c) + (F24_Equities__c * F24P_Equities__c) + (F24_FixedIncome__c * F24P_FixedIncome__c) + (F24_FX__c * F24P_FX__c) + (F24_OtherMADCMECM__c * F24P_OtherMADCMECM__c) + (F24_OtherRBBWealth__c * F24P_OtherRBBWealth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Len Cont (weight) Next 12-24M</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_H12_Contribution__c</fullName>
        <formula>H12_Deposits__c + H12_TransactionProducts__c + H12_Equities__c + H12_FixedIncome__c + H12_Debt__c + H12_Trade__c + H12_FX__c + H12_AssetSalesFinance__c + H12_OtherTrade__c + H12_OtherMADCMECM__c + H12_OtherRBBWealth__c + H12_CommercialPropertyFinance__c + H12_Passive__c + H12_PrimeServices__c + H12_PrivateEquity__c + H12_Treasury__c + H12_WorkingCapital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cont Hist 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tot_H12_Non_Lending_Contrib__c</fullName>
        <formula>H12_Deposits__c + H12_TransactionProducts__c + H12_Equities__c + H12_FixedIncome__c + H12_FX__c + H12_OtherMADCMECM__c + H12_OtherRBBWealth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Non-Len Cont Hist 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rorwa_AssetSalesFinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset &amp; Sales Finance RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_AverageDepositBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Average Deposit Balance RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_CommercialPropertyFinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Property Finance RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debt RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposits RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Derivatives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Derivatives RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Equities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equities RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_FX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FX RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_FixedIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Income RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_OtherMADCMECM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other M&amp;A / DCM / ECM RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_OtherRBBWealth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other RBB / Wealth RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_OtherTrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Trade RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Passive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passive RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_PrimeServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Services RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_PrivateEquity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Equity RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_TransactionProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Products RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_Treasury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treasury RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rorwa_WorkingCapital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working Capital RoRWA?</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Plan Revenue By Product</label>
    <nameField>
        <label>Revenue By Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Plan Revenue By Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>